--- a/anime-blog/css/blog-detail.css
+++ b/anime-blog/css/blog-detail.css
@@ -800,6 +800,15 @@ body.lock {
     line-height: 153.8461538462%;
   }
 }
+.item3__text4__btn {
+  position: absolute;
+  bottom: 0;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0), white 50%);
+  width: 100%;
+  height: 60px;
+  opacity: 1;
+  transition: all 0.3s ease 0s;
+}
 
 .trend__headline2 {
   border-top: 1px solid #D6D6D6;
