--- a/anime-blog/css/blog-detail.css
+++ b/anime-blog/css/blog-detail.css
@@ -800,7 +800,8 @@ body.lock {
     line-height: 153.8461538462%;
   }
 }
-.item3__text4__btn {
+
+.text4__btn {
   position: absolute;
   bottom: 0;
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0), white 50%);
