--- a/anime-blog/scss/blog-detail.scss
+++ b/anime-blog/scss/blog-detail.scss
@@ -144,16 +144,16 @@ body.lock {
             font-size: 13px;
             line-height: 20 / 13 * 100%;
         }
-        &__btn {
-            position: absolute;
-            bottom: 0;
-            background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 50%);
-            width: 100%;
-            height: 60px;
-            opacity: 1;
-            transition: all 0.3s ease 0s;
-        }
     }
+}
+.text4__btn {
+    position: absolute;
+    bottom: 0;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 50%);
+    width: 100%;
+    height: 60px;
+    opacity: 1;
+    transition: all 0.3s ease 0s;
 }
 .trend {
 
