--- a/anime-blog/css/blog-detail.css
+++ b/anime-blog/css/blog-detail.css
@@ -814,6 +814,18 @@ button#btn2:hover {
   transform: scale(1.2) translateX(8px);
 }
 
+button#btn3 {
+  padding: 10px 15px;
+  border: #FAFAFA 2px solid;
+  color: #FAFAFA;
+  background: #020202;
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+}
+button#btn3:hover {
+  transform: scale(1.2) translateX(8px);
+}
+
 .trend__headline2 {
   border-top: 1px solid #D6D6D6;
   border-radius: 5px;
